little refactoring / cleanup